add auth on API by using account in DB
